[package]
name = "simple-digraph"
version = "0.3.4"
edition = "2021"
description = "Simplest reference-counting directed graph library"
authors = ["Victor Porton"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
